#copy catalog of parts and connections
FILE(GLOB NODESTREE_XML_FILES 
	${TINKERCELL_SOURCE_DIR}/NodesTree/NodesTree.xml
	${TINKERCELL_SOURCE_DIR}/NodesTree/ConnectionsTree.xml
	${TINKERCELL_SOURCE_DIR}/NodesTree/InitialCatalogList.txt
)

INSTALL( FILES ${NODESTREE_XML_FILES}
  DESTINATION NodesTree
  COMPONENT NodesAndConnections
)

SET(LIBRARY_OUTPUT_PATH ${CPP_LIBRARY_OUTPUT_PATH})

INCLUDE_DIRECTORIES( BEFORE
    ${TINKERCELL_SOURCE_DIR}/NodesTree
 )

SET( TINKERCELL_CORE_HDRS
  ../Core/MainWindow.h 
  ../Core/NetworkHandle.h
  ../Core/NetworkWindow.h
  ../Core/CodeEditor.h
  ../Core/TextEditor.h 
  ../Core/GraphicsScene.h
  ../Core/GraphicsView.h  
  ../Core/Tool.h
  )

FILE( GLOB TINKERCELL_NODESTREE_SRC *.cpp )
FILE( GLOB TINKERCELL_NODESTREE_HDRS *.h )

QT4_WRAP_CPP( TINKERCELL_NODESTREE_MOC 
  ${TINKERCELL_NODESTREE_HDRS}
  ${TINKERCELL_CORE_HDRS}
 )

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

ADD_LIBRARY( NodesTree 
  SHARED
  ${TINKERCELL_NODESTREE_SRC}
  ${TINKERCELL_NODESTREE_MOC}
  )

TARGET_LINK_LIBRARIES( NodesTree
  NodesTree 
  TinkerCellCore
  )

IF ( WIN32 )
  INSTALL(TARGETS NodesTree
    DESTINATION plugins
    COMPONENT plugins
  )
ELSE ( WIN32 )
  INSTALL(TARGETS NodesTree
    LIBRARY DESTINATION plugins
    COMPONENT plugins
  )
ENDIF( WIN32 )



